--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Confit | Gym Management System</title>
+    <title>Fitcon | Gym Management System</title>
+
+    <!-- manifest -->
+     <link rel="manifest" href="manifest.json">
 
     <!-- iconoir -->
     <link
